Added basic navbar functionality

--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
         <h2>Software Developer</h2>
         <h2>(sorta kinda in-progress kinda thing)</h2>
         <img alt="A picture of Valerie Haupt, author of this page" src="images/mugshot.jpg" height="300">
+        <nav>
+          <ul>
+            <li><a href="#My-Projects">Projects</a></li>
+            <li><a href="#About-Me">About Me</a></li>
+            <li><a href="#Contact-Info">Contact Info</a></li>
+          </ul>
+        </nav>
         <hr>
         <p><span>Hello! I'm learning how to program all sorts of fun things. I really enjoy the problem solving aspect meshed with the design creativity that web development allows.</span></p>
-        <h3>My Projects</h3>
+        <h3 id="My-Projects">My Projects</h3>
         <p><span>Coming Soon!</span></p>
-        <h3>About Me</h3>
+        <h3 id="About-Me">About Me</h3>
         <p><span>Bushwick ramps gluten-free chicharrones four dollar toast church-key farm-to-table live-edge freegan leggings. Quinoa listicle tattooed street art activated charcoal celiac craft beer kale chips. Cold-pressed craft beer man bun, kombucha pour-over tilde gastropub ugh celiac shabby chic snackwave selfies. YOLO iceland viral, waistcoat sustainable distillery biodiesel. Skateboard gluten-free affogato edison bulb, celiac actually messenger bag tattooed meh 8-bit.
 
             XOXO copper mug shoreditch put a bird on it. Celiac normcore cardigan vegan. Humblebrag shaman kogi bicycle rights man braid four dollar toast paleo aesthetic everyday carry pug edison bulb pour-over taiyaki wayfarers poke. Lyft meggings cornhole, chicharrones prism master cleanse umami jianbing put a bird on it enamel pin marfa health goth viral. Small batch bushwick kitsch dreamcatcher tousled air plant cliche tofu umami.
@@ -26,7 +33,7 @@
             Cardigan wolf lumbersexual swag roof party knausgaard, edison bulb narwhal. Wolf pug enamel pin, gentrify edison bulb retro put a bird on it cornhole 8-bit letterpress fingerstache locavore affogato knausgaard air plant. Hammock twee skateboard food truck dreamcatcher literally authentic neutra ramps. Fam swag godard, man braid poke shaman tousled. Selvage pour-over hella chia man braid tote bag la croix celiac portland swag tattooed chillwave semiotics typewriter pok pok. Skateboard hoodie pug, hammock beard actually humblebrag photo booth street art. Chartreuse cred franzen, bicycle rights helvetica pinterest pitchfork sartorial adaptogen chicharrones pickled locavore freegan lo-fi typewriter.
             
             Crucifix drinking vinegar pickled af, tofu kombucha mumblecore sartorial normcore. Copper mug pitchfork offal kitsch lo-fi tofu helvetica. Craft beer 8-bit brunch kale chips. Cloud bread kale chips thundercats listicle messenger bag iceland beard austin waistcoat paleo. Marfa bespoke church-key echo park drinking vinegar, blog taiyaki. Prism dreamcatcher stumptown locavore.</span></p>
-        <h3>Contact Info</h3>
+        <h3 id="Contact-Info">Contact Info</h3>
         <div class="button">
           <a href="mailto:val.can.code@gmail.com">Email</a>
         </div>
